--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Ph: +91 8971555955
 LinkedIn: Sumeet K
 GitHub: Sumeet-162
       </pre>
-      <button class="xp-btn" onclick="window.location.href='assets/resume.pdf';" download style="font-size:1rem;margin-top:1em;">
+      <button class="xp-btn" onclick="window.location.href='pdf/JuneResume.pdf';" download style="font-size:1rem;margin-top:1em;">
         <img src="assets/icons/download.svg" class="xp-icon" alt="Download">
         <b>Download Resume</b>
       </button>
